# rcp-agent

./: .env.example  .gitignore  LANGGRAPH_STUDIO.md  LICENSE  README.md  UI_README.md  langgraph.json  main.py  pyproject.toml  requirements.txt  setup_ui.sh  studio.py  ui_main.py
.github/instructions/: rcp-agent.instructions.md
agent/: graph.py  model.py  nodes.py  state.py  tools.py
infra/: README.md  docker-compose.yml
prompts/: chat_prompts.py  system_prompts.py
static/: index.html
