[project]
name = "rcp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.4",
    "poethepoet>=0.36.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]

[tool.poe.tasks]
cli = "uv run python main.py"
